# ejercicios-bdd

./: README.md
taller1_definicion_de_datos_sql/: creacion_tablas.sql  matches_copy.csv
taller2_restricciones_de_integridad_sql/: restriccion_integridad.sql
taller3_algebra_relacional_relax/: taller_3_in_progress.docx
taller4_sql/: taller4_parteA_resolucion.sql  taller4_parteB_resolucion.sql  taller4_parteC_resolucion.sql  taller4_parteD_resolucion.sql  taller4_parteE_resolucion.sql  taller4_parteF_resolucion.sql
taller5_sql_nulos/: create_tables_script.sql  taller5_resolucion.sql
taller6_programacion_con_bdd/taller-programacion-2023c2/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
taller6_programacion_con_bdd/taller-programacion-2023c2/.devcontainer/: devcontainer.json
taller6_programacion_con_bdd/taller-programacion-2023c2/client/: main.py  utils.py
taller6_programacion_con_bdd/taller-programacion-2023c2/client/postgres/: __init__.py  cars.py  tweets.py  utils.py
taller6_programacion_con_bdd/taller-programacion-2023c2/data/db/: .gitignore
taller6_programacion_con_bdd/taller-programacion-2023c2/webserver/: Dockerfile  entrypoint.sh  pyproject.toml
taller6_programacion_con_bdd/taller-programacion-2023c2/webserver/data/: cars.json
taller6_programacion_con_bdd/taller-programacion-2023c2/webserver/src/: database.py  main.py  response_car.py  response_tweet.py  tweet.py  tweet_example.json
