[tool.poetry]
name = "webserver"
version = "0.1.0"
description = "Webserver para simulación de extracción de datos"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pymongo = "^4.5.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
cryptography = "^41.0.4"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
